[gd_scene load_steps=14 format=3 uid="uid://pomkjln67fbm"]

[ext_resource type="Script" uid="uid://cph1lkb1yeqxd" path="res://scenes/ui.gd" id="1_cgfq5"]
[ext_resource type="Script" uid="uid://bv4ay0w2omeq7" path="res://scenes/inventory.gd" id="1_ktti3"]
[ext_resource type="Texture2D" uid="uid://f2v8x7moyqm3" path="res://gane_assets/art/ui/Inventory.png" id="2_cgfq5"]
[ext_resource type="Texture2D" uid="uid://dycli02rpb86q" path="res://gane_assets/art/ui/Inventory_border.png" id="3_7dvkv"]
[ext_resource type="Script" uid="uid://ctw3i2bmaqm2u" path="res://scenes/item_bar.gd" id="4_vdcm2"]
[ext_resource type="Texture2D" uid="uid://bq168obvq1b1s" path="res://gane_assets/art/ui/item_bar.png" id="5_6rmj2"]
[ext_resource type="Texture2D" uid="uid://dorct7af5ievw" path="res://gane_assets/art/ui/item_bar_border.png" id="6_vsj0x"]
[ext_resource type="Texture2D" uid="uid://c3ygcejqka6m5" path="res://gane_assets/art/ui/item_bar_select.png" id="7_qsv74"]
[ext_resource type="Script" uid="uid://d22isqlq8s2il" path="res://scenes/ui_hand.gd" id="9_cgfq5"]
[ext_resource type="Texture2D" uid="uid://c55rw3uewrdcr" path="res://gane_assets/art/ui/PaperUiPanel.png" id="10_7dvkv"]
[ext_resource type="FontFile" uid="uid://rhxjjebvv6hl" path="res://gane_assets/art/fonts/IPix中文像素字体.ttf" id="11_vdcm2"]
[ext_resource type="Texture2D" uid="uid://y0bc7a3u5blg" path="res://gane_assets/art/ui/PaperUiPanelCartoony.png" id="12_6rmj2"]
[ext_resource type="Script" uid="uid://dvqqo3mpp235p" path="res://scenes/player_equipment.gd" id="12_vsj0x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cgfq5")

[node name="Inventory" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 256.0
offset_bottom = 310.0
mouse_filter = 1
script = ExtResource("1_ktti3")

[node name="Inventory2" type="Sprite2D" parent="Inventory"]
texture = ExtResource("2_cgfq5")
centered = false

[node name="InventoryBorder" type="Sprite2D" parent="Inventory"]
texture = ExtResource("3_7dvkv")
centered = false

[node name="ColorRect" type="ColorRect" parent="Inventory"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0, 0, 0.054902, 0.396078)

[node name="Container" type="Control" parent="Inventory"]
anchors_preset = 0
offset_left = 17.0
offset_top = 45.0
offset_right = 529.0
offset_bottom = 685.0

[node name="item_bar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 686.0
offset_top = 891.0
offset_right = 726.0
offset_bottom = 931.0
script = ExtResource("4_vdcm2")

[node name="ItemBar" type="Sprite2D" parent="item_bar"]
texture = ExtResource("5_6rmj2")
centered = false

[node name="ItemBarBorder" type="Sprite2D" parent="item_bar"]
texture = ExtResource("6_vsj0x")
centered = false

[node name="ItemBarSelect" type="Sprite2D" parent="item_bar"]
texture = ExtResource("7_qsv74")
centered = false

[node name="hand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("9_cgfq5")

[node name="ColorRect" type="ColorRect" parent="hand"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
color = Color(1, 1, 1, 0.423529)

[node name="hand_item" type="Control" parent="hand"]
anchors_preset = 0

[node name="player_info" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="player_info"]
layout_mode = 0
offset_left = 694.0
offset_top = 42.0
offset_right = 1102.0
offset_bottom = 582.0
texture = ExtResource("10_7dvkv")
region_rect = Rect2(0, 0, 143, 137)
patch_margin_left = 26
patch_margin_top = 27
patch_margin_right = 25
patch_margin_bottom = 25

[node name="RichTextLabel" type="RichTextLabel" parent="player_info/NinePatchRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 35.0
offset_right = 385.0
offset_bottom = 508.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_vdcm2")
bbcode_enabled = true
text = "测试文字"

[node name="Label" type="Label" parent="player_info"]
layout_mode = 0
offset_left = 705.0
offset_top = 54.0
offset_right = 1089.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_vdcm2")
theme_override_font_sizes/font_size = 20
text = "玩家信息"
horizontal_alignment = 1

[node name="player_equipment" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_vsj0x")

[node name="NinePatchRect" type="NinePatchRect" parent="player_equipment"]
layout_mode = 0
offset_left = 646.0
offset_top = 42.0
offset_right = 1102.0
offset_bottom = 632.0
texture = ExtResource("10_7dvkv")
region_rect = Rect2(0, 0, 143, 137)
patch_margin_left = 26
patch_margin_top = 27
patch_margin_right = 25
patch_margin_bottom = 25

[node name="Label" type="Label" parent="player_equipment/NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 11.0
offset_right = 440.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_vdcm2")
theme_override_font_sizes/font_size = 20
text = "装备"
horizontal_alignment = 1

[node name="背部" type="Control" parent="player_equipment/NinePatchRect"]
anchors_preset = 0
offset_left = 94.0
offset_top = 38.0
offset_right = 134.0
offset_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="player_equipment/NinePatchRect/背部"]
layout_mode = 0
offset_right = 143.0
offset_bottom = 139.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_6rmj2")

[node name="Label" type="Label" parent="player_equipment/NinePatchRect/背部"]
layout_mode = 0
offset_left = -41.0
offset_top = 25.0
offset_right = -1.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_vdcm2")
theme_override_font_sizes/font_size = 20
text = "背部"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="player_equipment/NinePatchRect/背部"]
position = Vector2(36, 35)

[node name="腰部" type="Control" parent="player_equipment/NinePatchRect"]
layout_mode = 3
anchors_preset = 0
offset_left = 344.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 296.0

[node name="TextureRect" type="TextureRect" parent="player_equipment/NinePatchRect/腰部"]
layout_mode = 0
offset_right = 143.0
offset_bottom = 139.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_6rmj2")

[node name="Label" type="Label" parent="player_equipment/NinePatchRect/腰部"]
layout_mode = 0
offset_left = -41.0
offset_top = 25.0
offset_right = -1.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_vdcm2")
theme_override_font_sizes/font_size = 20
text = "腰部"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="player_equipment/NinePatchRect/腰部"]
position = Vector2(36, 35)

[connection signal="mouse_entered" from="Inventory/Container" to="Inventory" method="_on_container_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/Container" to="Inventory" method="_on_container_mouse_exited"]
